Closed Bug 1658948 Opened 4 years ago Closed 4 years ago

Software keyboard isn't shown again on contenteditable.

Categories

(GeckoView :: IME, defect, P1)

Unspecified
Android
defect

Tracking

(firefox83 fixed)

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

(Whiteboard: [geckoview:m82][geckoview:m83])

Attachments

(1 file)

From https://github.com/mozilla-mobile/fenix/issues/11785

Steps to reproduce

  1. Go to www.Onlinegdb.com/online_c++_compiler
  2. click on the centre text box
  3. keyboard appears
  4. press back
  5. click again on the centre text box

Expected behavior

Keyboard appears. Note that for most other text boxes this is the current behaviour

Actual behavior

Nothing.

Device information

Android device: Asus Zenfone
Fenix version: Nightly

Assignee: nobody → m_kato
Summary: Software keyboard doesn't show again on contenteditable. → Software keyboard isn't shown again on contenteditable.

This site uses Ace editor (https://ace.c9.io/).

https://jsfiddle.net/qhpwj1L9/4/

Ace doesn't use contentedtiable, it uses <textarea> to get input. Chrome opens software keyboard, but Firefox doesn't. I guess that this issue will occurs on Firefox for Windows and editor won't set InputContext on this situation.

Whiteboard: [geckoview:m82]
Priority: -- → P1
Whiteboard: [geckoview:m82] → [geckoview:m82][geckoview:m83]

Actually software keyboard is opened by the following situations.

  • Click event in editor
  • Get new focus event.

Ace editor has small <textarea> element to handles some input events.
When clicking editable-like area (but this isn't ediable on Ace editor),
mousedown handler calls event.preventDefault() then set focus to
<textarea> element. So editor doesn't get click event and focus is still
keep in <textarea> element. At finally, we cannot open software keyboard
again since focus isn't changed.

So even if focus isn't changed, we should call SetInputContext to open
software keyboard.

Also, actually we doesn't have generic test code for notification of
software keyboard change (bug 1670539). I will add the test by bug 1670539.

Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/7b96efde9ee1 Ace editor doesn't show software keyboard. r=masayuki
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Regressions: 1673434

Regressions: bug 1675313

Regressions: 1675313
Regressions: 1678844

Moving some keyboard bugs to the new GeckoView::IME component.

Component: General → IME
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: